--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,12 +38,48 @@ h4 {
 .navbar {
   background: var(--dark-gray);
   height: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
+  position: relative;
+  z-index: 1000;
   .container {
-    width: 1600px;
-    max-width: 95%;
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 42px 0;
+  }
+}
+
+.sidebar {
+  height: calc(100vh - 44px);
+  background: var(--dark-gray);
+  width: 305px;
+  .container {
+    padding: 2rem 0 0 42px;
+    .todo-list-titles {
+      width: 255px;
+      li {
+        min-height: 24px;
+        font-size: 14px;
+        font-weight: 300;
+        list-style: none;
+        cursor: pointer;
+        padding: 5px 16px 5px 5px;
+        border-radius: 3px;
+        transition: color 0.1s ease-in, background-color 0.1s ease-in;
+        color: #ffffffde;
+        min-height: 24px;
+        line-height: 24px;
+        &:hover {
+          background-color: #363636;
+        }
+        &.current {
+          background-color: #363636;
+          font-weight: 400;
+        }
+      }
+    }
   }
 }
