--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,13 +49,24 @@ h4 {
     width: 100%;
     height: 100%;
     padding: 0 42px 0;
+    .menu_icon {
+      cursor: pointer;
+    }
   }
 }
 
+main {
+  display: flex;
+}
+
 .sidebar {
+  position: absolute;
+  top: 44px;
+  left: 0;
   height: calc(100vh - 44px);
   background: var(--dark-gray);
   width: 305px;
+  transition: transform 0.5s ease-in-out;
   .container {
     padding: 2rem 0 0 42px;
     .todo-list-titles {
@@ -63,7 +74,7 @@ h4 {
       li {
         min-height: 24px;
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
         list-style: none;
         cursor: pointer;
         padding: 5px 16px 5px 5px;
@@ -72,14 +83,38 @@ h4 {
         color: #ffffffde;
         min-height: 24px;
         line-height: 24px;
+        margin: 0 0 0.2rem;
         &:hover {
           background-color: #363636;
         }
         &.current {
           background-color: #363636;
-          font-weight: 400;
+          font-weight: 500;
         }
       }
     }
+  }
+
+  &.closed {
+    transform: translateX(-310px);
+  }
+}
+
+.todo-container {
+  margin-left: 305px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  transition: 0.5s ease-in-out;
+
+  &.closed {
+    margin-left: 0;
+  }
+
+  &-screen {
+    padding: 30px 55px 0;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
   }
 }
