--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,8 @@
 :root {
   --dark-gray: #282828;
   --very-dark-gray: #1f1f1f;
+  --light-black: #171717;
+  --text-white: #ffffffde;
 }
 html {
   scroll-behavior: smooth;
@@ -16,7 +18,7 @@ html {
 body {
   overflow-x: hidden;
   background: var(--very-dark-gray);
-  color: white;
+  color: var(--text-white);
 }
 
 a {
@@ -80,7 +82,7 @@ main {
         padding: 5px 16px 5px 5px;
         border-radius: 3px;
         transition: color 0.1s ease-in, background-color 0.1s ease-in;
-        color: #ffffffde;
+        color: var(--text-white);
         min-height: 24px;
         line-height: 24px;
         margin: 0 0 0.2rem;
@@ -116,5 +118,100 @@ main {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+  }
+}
+
+.add-todo-input {
+  .container {
+    background: var(--light-black);
+    height: 100px;
+    border: 1px solid hsla(0, 0%, 100%, 0.1);
+    border-radius: 3px;
+    cursor: text;
+    padding: 0.5rem 1rem;
+    &:hover {
+      border: 1px solid #555;
+    }
+    div {
+      display: flex;
+      label {
+        font-size: 14px;
+      }
+      textarea {
+        transform: translateY(1.8px);
+        margin-left: 0.5rem;
+        background: none;
+        width: 100%;
+        outline: none;
+        border: none;
+        color: var(--text-white);
+        resize: none;
+        height: 24px;
+      }
+    }
+    .sub-options {
+      .date {
+        align-items: center;
+        input {
+          margin-left: 0.5rem;
+          background: var(--dark-gray);
+          color: var(--text-white);
+          border-radius: 3px;
+          outline: none;
+          border: 1px solid hsla(0, 0%, 100%, 0.1);
+          padding: 2px 3px;
+          transform: translateY(1.8px);
+          &:hover {
+            border: 1px solid #555;
+          }
+          &:focus {
+            border: 1px solid #555;
+          }
+        }
+      }
+      .urgency {
+        margin-left: 1.5rem;
+        align-items: center;
+        select {
+          margin-left: 0.5rem;
+          background: var(--dark-gray);
+          color: var(--text-white);
+          border-radius: 3px;
+          outline: none;
+          border: 1px solid hsla(0, 0%, 100%, 0.1);
+          padding: 2px 3px;
+          transform: translateY(1.8px);
+          &:hover {
+            border: 1px solid #555;
+          }
+          &:focus {
+            border: 1px solid #555;
+          }
+        }
+      }
+    }
+  }
+  .add-todo-button {
+    cursor: pointer;
+    margin: 0.5rem 0;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 6px 12px 7px;
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
+    border-radius: 3px;
+    text-decoration: none;
+    text-align: center;
+    background: #de4c4a;
+    border: 1px solid transparent;
+    outline: none;
+    color: #fff;
+    transition: 0.2s ease-in-out;
+
+    &:hover {
+      filter: brightness(1.1);
+    }
   }
 }
