--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -119,43 +119,42 @@ main {
     max-width: 800px;
     margin: 0 auto;
 
-    .add-todo-button {
-      display: flex;
-      align-items: center;
-      margin-top: 1rem;
-      cursor: pointer;
-      &:hover {
-        .plus {
-          background: #de4c4a;
-          color: white;
-          svg {
-            transform: translate(-1px, -1px);
-          }
-        }
-        p {
-          color: #de4c4a;
-        }
-      }
-      .plus {
-        height: 20px;
-        width: 20px;
-        border-radius: 50%;
-        display: grid;
-        place-content: center;
-        color: #de4c4a;
-        transition: 0.1s ease-in-out;
-        svg {
-          transition: 0.1s ease-in-out;
-        }
-      }
-      p {
-        margin-left: 0.5rem;
-        color: grey;
-        font-size: 14px;
-        font-weight: 300;
-        transition: 0.2s ease-in-out;
+    h1 {
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+.add-todo-button {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  cursor: pointer;
+  &:hover {
+    .plus {
+      background: #de4c4a;
+      color: white;
+      svg {
+        transform: translate(-1px, -1px);
       }
     }
+    p {
+      color: #de4c4a;
+    }
+  }
+  .plus {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+    color: #de4c4a;
+  }
+  p {
+    margin-left: 0.5rem;
+    color: grey;
+    font-size: 14px;
+    font-weight: 300;
   }
 }
 
