--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
   --very-dark-gray: #1f1f1f;
   --light-black: #171717;
   --text-white: #ffffffde;
+  --light-red: #de4c4a;
 }
 html {
   scroll-behavior: smooth;
@@ -36,6 +37,7 @@ h3,
 h4 {
   font-weight: 500;
 }
+@import './sidebar.scss';
 
 .navbar {
   background: var(--dark-gray);
@@ -59,47 +61,6 @@ h4 {
 
 main {
   display: flex;
-}
-
-.sidebar {
-  position: absolute;
-  top: 44px;
-  left: 0;
-  height: calc(100vh - 44px);
-  background: var(--dark-gray);
-  width: 305px;
-  transition: transform 0.5s ease-in-out;
-  .container {
-    padding: 2rem 0 0 42px;
-    .todo-list-titles {
-      width: 255px;
-      li {
-        min-height: 24px;
-        font-size: 14px;
-        font-weight: 400;
-        list-style: none;
-        cursor: pointer;
-        padding: 5px 16px 5px 5px;
-        border-radius: 3px;
-        transition: color 0.1s ease-in, background-color 0.1s ease-in;
-        color: var(--text-white);
-        min-height: 24px;
-        line-height: 24px;
-        margin: 0 0 0.2rem;
-        &:hover {
-          background-color: #363636;
-        }
-        &.current {
-          background-color: #363636;
-          font-weight: 500;
-        }
-      }
-    }
-  }
-
-  &.closed {
-    transform: translateX(-310px);
-  }
 }
 
 .todo-container {
