--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -53,7 +53,7 @@ h4 {
     width: 100%;
     height: 100%;
     padding: 0 42px 0;
-    .menu_icon {
+    .menu-toggler {
       cursor: pointer;
     }
   }
@@ -63,18 +63,18 @@ main {
   display: flex;
 }
 
-.todo-container {
+.dashboard {
   margin-left: 305px;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
 
   &.closed {
     margin-left: 0;
   }
 
-  &-screen {
+  .todo-container {
     padding: 30px 55px 0;
     width: 100%;
     max-width: 800px;
