--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -8,7 +8,7 @@
   transition: transform 0.3s ease-in-out;
   .container {
     padding: 2rem 0 0 42px;
-    .todo-list-titles {
+    .task-list-titles {
       width: 255px;
       li {
         min-height: 24px;
@@ -32,12 +32,12 @@
         }
       }
     }
-    .add-new-list-form {
+    .add-new-project-form {
       input {
         background: none;
         outline: 0;
         border: 0;
-        border-bottom: 2px solid grey;
+        border-bottom: 2px solid #646464;
         padding: 5px 16px 5px 5px;
         color: var(--text-white);
         transition: 0.2s ease-in-out;
