--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,238 +37,13 @@ h3,
 h4 {
   font-weight: 500;
 }
+@import './navbar.scss';
 @import './sidebar.scss';
-
-.navbar {
-  background: var(--dark-gray);
-  height: 44px;
-
-  border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
-  position: relative;
-  z-index: 1000;
-  .container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 0 42px 0;
-    .menu-toggler {
-      cursor: pointer;
-    }
-  }
-}
+@import './dashboard.scss';
+@import './addTask.scss';
 
 main {
   display: flex;
-}
-
-.dashboard {
-  margin-left: 305px;
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  transition: 0.3s ease-in-out;
-
-  &.closed {
-    margin-left: 0;
-  }
-
-  .todo-container {
-    padding: 30px 55px 0;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-
-    h1 {
-      margin-bottom: 2rem;
-    }
-  }
-}
-
-.add-todo-button {
-  display: flex;
-  align-items: center;
-  margin-top: 1rem;
-  cursor: pointer;
-  &:hover {
-    .plus {
-      background: #de4c4a;
-      color: white;
-    }
-    p {
-      color: #de4c4a;
-    }
-  }
-  .plus {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    display: grid;
-    place-content: center;
-    color: #de4c4a;
-    svg {
-      transform: translate(0, -1px);
-    }
-  }
-  p {
-    margin-left: 0.5rem;
-    color: grey;
-    font-size: 14px;
-    font-weight: 300;
-  }
-}
-
-.add-todo-form {
-  margin-top: 1rem;
-
-  .container {
-    background: var(--light-black);
-    border: 1px solid hsla(0, 0%, 100%, 0.1);
-    border-radius: 3px;
-    cursor: text;
-    padding: 0.5rem 1rem 0.8rem;
-    &:hover {
-      border: 1px solid #555;
-    }
-    div {
-      display: flex;
-      // margin-bottom: 0.3rem;
-      label {
-        font-size: 14px;
-        height: 32px;
-        display: flex;
-        align-items: center;
-        width: fit-content;
-      }
-      input {
-        display: flex;
-        align-items: center;
-        margin-left: 0.5rem;
-        background: none;
-        width: 100%;
-        outline: none;
-        border: none;
-        color: var(--text-white);
-        resize: none;
-        height: 32px;
-        transform: translateY(1.3px);
-      }
-    }
-    .sub-options {
-      .urgency {
-        align-items: center;
-        select {
-          margin-left: 0.5rem;
-          background: var(--dark-gray);
-          color: var(--text-white);
-          border-radius: 3px;
-          outline: none;
-          border: 1px solid hsla(0, 0%, 100%, 0.1);
-          height: 32px;
-          padding: 2px 3px;
-          transform: translateY(1.8px);
-          &:hover {
-            border: 1px solid #555;
-          }
-          &:focus {
-            border: 1px solid #555;
-          }
-        }
-      }
-      .date {
-        margin-left: 1.5rem;
-        align-items: center;
-        label {
-          width: 110px;
-        }
-        input {
-          margin-left: 0.5rem;
-          background: var(--dark-gray);
-          color: var(--text-white);
-          border-radius: 3px;
-          outline: none;
-          border: 1px solid hsla(0, 0%, 100%, 0.1);
-          padding: 2px 3px;
-          transform: translateY(1.8px);
-          &:hover {
-            border: 1px solid #555;
-          }
-          &:focus {
-            border: 1px solid #555;
-          }
-        }
-      }
-      .list {
-        margin-left: 1.5rem;
-        align-items: center;
-        select {
-          margin-left: 0.5rem;
-          background: var(--dark-gray);
-          color: var(--text-white);
-          border-radius: 3px;
-          outline: none;
-          border: 1px solid hsla(0, 0%, 100%, 0.1);
-          padding: 2px 3px;
-          transform: translateY(1.8px);
-          height: 32px;
-          &:hover {
-            border: 1px solid #555;
-          }
-          &:focus {
-            border: 1px solid #555;
-          }
-        }
-      }
-    }
-  }
-  .add-todo-button {
-    cursor: pointer;
-    margin: 0.5rem 0;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    padding: 6px 12px 7px;
-    position: relative;
-    display: inline-block;
-    white-space: nowrap;
-    border-radius: 3px;
-    text-decoration: none;
-    text-align: center;
-    background: #de4c4a;
-    border: 1px solid transparent;
-    outline: none;
-    color: #fff;
-    transition: 0.2s ease-in-out;
-
-    &:hover {
-      filter: brightness(1.1);
-    }
-  }
-  .cancel {
-    margin-left: 1rem;
-    cursor: pointer;
-    margin: 0.5rem 0;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    padding: 6px 12px 7px;
-    position: relative;
-    display: inline-block;
-    white-space: nowrap;
-    border-radius: 3px;
-    text-decoration: none;
-    text-align: center;
-    border: 1px solid transparent;
-    outline: none;
-    color: #fff;
-    background: none;
-    transition: 0.2s ease-in-out;
-
-    &:hover {
-      filter: brightness(1.1);
-    }
-  }
 }
 
 .no-select {
