--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -14,6 +14,17 @@
     padding: 0 42px 0;
     .menu-toggler {
       cursor: pointer;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        color: var(--light-red);
+      }
+    }
+    .home {
+      cursor: pointer;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        color: var(--light-red);
+      }
     }
   }
 }
