Added toggleClose function for sidebar and dashboard

--- a/src/styles/addTask.scss
+++ b/src/styles/addTask.scss
@@ -111,7 +111,7 @@
           }
         }
       }
-      .list {
+      .project-selection {
         margin-left: 1.5rem;
         align-items: center;
         select {
