--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -8,7 +8,7 @@
   transition: transform 0.3s ease-in-out;
   .container {
     padding: 2rem 0 0 42px;
-    .task-list-titles {
+    .project-titles {
       width: 255px;
       li {
         min-height: 24px;
