--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -26,7 +26,7 @@
         &:hover {
           background-color: #363636;
         }
-        &.current {
+        &.active {
           background-color: #363636;
           font-weight: 500;
         }
