--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 :root {
   --dark-gray: #282828;
