--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   background: var(--very-dark-gray);
   color: var(--text-white);
 }
@@ -28,10 +28,6 @@ body {
 a {
   text-decoration: none;
   color: unset;
-}
-
-li {
-  // list-style: none !important;
 }
 
 h1,
