--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -6,16 +6,31 @@ main {
     flex-grow: 1;
     flex-direction: column;
     transition: 0.3s ease-in-out;
-
+    height: calc(100vh - 43px);
+    overflow-y: auto;
+    padding-bottom: 4rem;
+    &::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #a03634;
+      border-radius: 0px;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background: #b43e3c;
+    }
+    &::-webkit-scrollbar-track {
+      background: #414141;
+      border-radius: 0px;
+    }
     &.closed {
       margin-left: 0;
     }
 
     .project-container {
-      overflow-y: auto;
       padding: 30px 55px 0;
       width: 100%;
-      height: fit-content;
       max-width: 800px;
       margin: 0 auto;
       h1 {
