--- a/src/styles/addTask.scss
+++ b/src/styles/addTask.scss
@@ -35,7 +35,12 @@
 
 .add-task-form {
   margin-top: 1rem;
-
+  @media (max-width: 1100px) {
+    min-width: 580px;
+  }
+  @media (max-width: 750px) {
+    min-width: unset;
+  }
   .container {
     background: var(--light-black);
     border: 1px solid hsla(0, 0%, 100%, 0.1);
@@ -70,18 +75,24 @@
       }
     }
     .sub-options {
-      .priority {
-        align-items: center;
-        .priority-select {
-          margin-left: 0.5rem;
+      @media (max-width: 750px) {
+        flex-direction: column;
+      }
+      div {
+        @media (max-width: 750px) {
+          margin: 0 0 0.2rem 0 !important;
+        }
+        label {
+        }
+        input,
+        select {
           background: var(--dark-gray);
           color: var(--text-white);
           border-radius: 3px;
           outline: none;
           border: 1px solid hsla(0, 0%, 100%, 0.1);
           height: 32px;
-          padding: 2px 3px;
-          transform: translateY(1.8px);
+          padding: 2px 10px;
           &:hover {
             border: 1px solid #555;
           }
@@ -90,27 +101,46 @@
           }
         }
       }
+      .priority {
+        align-items: center;
+        .priority-select {
+          margin-left: 0.5rem;
+
+          // background: var(--dark-gray);
+          // color: var(--text-white);
+          // border-radius: 3px;
+          // outline: none;
+          // border: 1px solid hsla(0, 0%, 100%, 0.1);
+          // height: 32px;
+          // padding: 2px 10px;
+          // &:hover {
+          //   border: 1px solid #555;
+          // }
+          // &:focus {
+          //   border: 1px solid #555;
+          // }
+        }
+      }
       .date {
         margin-left: 1.5rem;
         align-items: center;
         label {
-          width: 110px;
         }
         input {
           margin-left: 0.5rem;
-          background: var(--dark-gray);
-          color: var(--text-white);
-          border-radius: 3px;
-          outline: none;
-          border: 1px solid hsla(0, 0%, 100%, 0.1);
-          padding: 2px 3px;
-          transform: translateY(1.8px);
-          &:hover {
-            border: 1px solid #555;
-          }
-          &:focus {
-            border: 1px solid #555;
-          }
+          // background: var(--dark-gray);
+          // color: var(--text-white);
+          // border-radius: 3px;
+          // outline: none;
+          // border: 1px solid hsla(0, 0%, 100%, 0.1);
+          // padding: 2px 3px;
+          width: 140px;
+          // &:hover {
+          //   border: 1px solid #555;
+          // }
+          // &:focus {
+          //   border: 1px solid #555;
+          // }
         }
       }
       .project-selection {
@@ -118,20 +148,19 @@
         align-items: center;
         select {
           margin-left: 0.5rem;
-          background: var(--dark-gray);
-          color: var(--text-white);
-          border-radius: 3px;
-          outline: none;
-          border: 1px solid hsla(0, 0%, 100%, 0.1);
-          padding: 2px 3px;
-          transform: translateY(1.8px);
-          height: 32px;
-          &:hover {
-            border: 1px solid #555;
-          }
-          &:focus {
-            border: 1px solid #555;
-          }
+          // background: var(--dark-gray);
+          // color: var(--text-white);
+          // border-radius: 3px;
+          // outline: none;
+          // border: 1px solid hsla(0, 0%, 100%, 0.1);
+          // padding: 2px 3px;
+          // height: 32px;
+          // &:hover {
+          //   border: 1px solid #555;
+          // }
+          // &:focus {
+          //   border: 1px solid #555;
+          // }
         }
       }
     }
