--- a/src/styles/addTask.scss
+++ b/src/styles/addTask.scss
@@ -41,6 +41,9 @@
   @media (max-width: 750px) {
     min-width: unset;
   }
+  @media (max-width: 550px) {
+    transform: translateX(-0.5rem);
+  }
   .container {
     background: var(--light-black);
     border: 1px solid hsla(0, 0%, 100%, 0.1);
@@ -105,20 +108,6 @@
         align-items: center;
         .priority-select {
           margin-left: 0.5rem;
-
-          // background: var(--dark-gray);
-          // color: var(--text-white);
-          // border-radius: 3px;
-          // outline: none;
-          // border: 1px solid hsla(0, 0%, 100%, 0.1);
-          // height: 32px;
-          // padding: 2px 10px;
-          // &:hover {
-          //   border: 1px solid #555;
-          // }
-          // &:focus {
-          //   border: 1px solid #555;
-          // }
         }
       }
       .date {
@@ -128,19 +117,7 @@
         }
         input {
           margin-left: 0.5rem;
-          // background: var(--dark-gray);
-          // color: var(--text-white);
-          // border-radius: 3px;
-          // outline: none;
-          // border: 1px solid hsla(0, 0%, 100%, 0.1);
-          // padding: 2px 3px;
           width: 140px;
-          // &:hover {
-          //   border: 1px solid #555;
-          // }
-          // &:focus {
-          //   border: 1px solid #555;
-          // }
         }
       }
       .project-selection {
@@ -148,19 +125,6 @@
         align-items: center;
         select {
           margin-left: 0.5rem;
-          // background: var(--dark-gray);
-          // color: var(--text-white);
-          // border-radius: 3px;
-          // outline: none;
-          // border: 1px solid hsla(0, 0%, 100%, 0.1);
-          // padding: 2px 3px;
-          // height: 32px;
-          // &:hover {
-          //   border: 1px solid #555;
-          // }
-          // &:focus {
-          //   border: 1px solid #555;
-          // }
         }
       }
     }
