--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -5,12 +5,15 @@ main {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    min-width: 400px;
+    min-width: 320px;
     transition: 0.3s ease-in-out;
     height: calc(100vh - 43px);
     overflow-y: auto;
     overflow-x: hidden;
     padding-bottom: 4rem;
+    @media (max-width: 750px) {
+      margin-left: 0;
+    }
     &::-webkit-scrollbar {
       width: 10px;
       height: 10px;
@@ -27,7 +30,9 @@ main {
       border-radius: 0px;
     }
     &.closed {
-      margin-left: 0;
+      @media (min-width: 550px) {
+        margin-left: 0;
+      }
     }
 
     .project-container {
@@ -35,6 +40,12 @@ main {
       width: 100%;
       max-width: 800px;
       margin: 0 auto;
+      @media (max-width: 750px) {
+        padding: 30px 30px 0;
+      }
+      @media (max-width: 550px) {
+        padding: 30px 10px 0;
+      }
       h1 {
         margin-bottom: 1.5rem;
       }
@@ -97,7 +108,9 @@ main {
 
 .task-list {
   margin: 0.5rem 0 0 2rem;
-
+  @media (max-width: 550px) {
+    margin: 0.5rem 0 0 1rem;
+  }
   li {
     color: rgb(195, 195, 195);
     margin-bottom: 0.5rem;
