--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -12,6 +12,10 @@
     width: 100%;
     height: 100%;
     padding: 0 42px 0;
+
+    @media (max-width: 550px) {
+      padding: 0 10px 0;
+    }
     .menu-toggler {
       cursor: pointer;
       transition: 0.2s ease-in-out;
