--- a/src/styles/addTask.scss
+++ b/src/styles/addTask.scss
@@ -4,12 +4,14 @@
   margin-top: 1rem;
   cursor: pointer;
   &:hover {
-    .plus {
-      background: #de4c4a;
-      color: white;
-    }
-    p {
-      color: #de4c4a;
+    @media (min-width: 600px) {
+      .plus {
+        background: #de4c4a;
+        color: white;
+      }
+      p {
+        color: #de4c4a;
+      }
     }
   }
   .plus {
@@ -51,12 +53,14 @@
     cursor: text;
     padding: 0.5rem 1rem 0.8rem;
     &:hover {
-      border: 1px solid #555;
+      @media (min-width: 600px) {
+        border: 1px solid #555;
+      }
     }
     div {
       display: flex;
       label {
-        font-size: 14px;
+        font-size: 16px;
         height: 32px;
         display: flex;
         align-items: center;
@@ -97,7 +101,9 @@
           height: 32px;
           padding: 2px 10px;
           &:hover {
-            border: 1px solid #555;
+            @media (min-width: 600px) {
+              border: 1px solid #555;
+            }
           }
           &:focus {
             border: 1px solid #555;
@@ -113,11 +119,9 @@
       .date {
         margin-left: 1.5rem;
         align-items: center;
-        label {
-        }
         input {
           margin-left: 0.5rem;
-          width: 140px;
+          width: 160px;
         }
       }
       .project-selection {
@@ -133,9 +137,9 @@
     cursor: pointer;
     margin: 0.5rem 0;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 17px;
-    padding: 6px 14px 7px 12px;
+    padding: 6px 16px 7px 12px;
     position: relative;
     display: inline-block;
     white-space: nowrap;
@@ -149,7 +153,9 @@
     transition: 0.2s ease-in-out;
 
     &:hover {
-      filter: brightness(1.1);
+      @media (min-width: 600px) {
+        filter: brightness(1.1);
+      }
     }
   }
   .cancel {
@@ -173,13 +179,17 @@
     transition: 0.2s ease-in-out;
 
     &:hover {
-      filter: brightness(1.1);
-      background: #303030;
+      @media (min-width: 600px) {
+        filter: brightness(1.1);
+        background: #303030;
+      }
     }
   }
 }
 
 .completed {
   opacity: 0.5;
-  text-decoration: line-through;
+  h3 {
+    text-decoration: line-through;
+  }
 }
