--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -20,14 +20,18 @@
       cursor: pointer;
       transition: 0.2s ease-in-out;
       &:hover {
-        color: var(--light-red);
+        @media (min-width: 600px) {
+          color: var(--light-red);
+        }
       }
     }
     .home {
       cursor: pointer;
       transition: 0.2s ease-in-out;
       &:hover {
-        color: var(--light-red);
+        @media (min-width: 600px) {
+          color: var(--light-red);
+        }
       }
     }
   }
