--- a/src/styles/addTask.scss
+++ b/src/styles/addTask.scss
@@ -19,11 +19,12 @@
     width: 20px;
     border-radius: 50%;
     color: #de4c4a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
     svg {
-      transform: translate(-1px, -1px);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
   .add-task-text {
