--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -42,8 +42,11 @@ input {
   -webkit-border-radius: 0;
   font-size: 16px;
 }
-label {
+select {
   font-size: 16px;
+}
+label {
+  font-size: 14px !important;
 }
 
 @import './navbar.scss';
