--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -28,13 +28,15 @@
         align-items: center;
         &:hover {
           background-color: #363636;
-          button {
-            opacity: 1;
-          }
         }
         &.active {
           background-color: #363636;
           font-weight: 500;
+          &:hover {
+            button {
+              opacity: 1;
+            }
+          }
         }
         span {
           width: 100px;
