--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -35,6 +35,10 @@
           &:hover {
             button {
               opacity: 1;
+              pointer-events: all;
+              cursor: pointer;
+              display: inline;
+              pointer-events: initial;
             }
           }
         }
@@ -44,6 +48,8 @@
           flex: 1;
         }
         button {
+          display: none;
+          pointer-events: none;
           color: rgb(230, 230, 230);
           background: rgb(172, 15, 15);
           padding: 4px 7px 4px 6px;
@@ -51,7 +57,7 @@
           border-radius: 2px;
           outline: none;
           margin-left: 1rem;
-          cursor: pointer;
+          pointer-events: none;
           display: grid;
           grid-template-columns: 16px;
           grid-template-rows: 16px;
